# ObnoxiousCenters

./: README.md
ComputationModule/: CMakeLists.txt  debug_data.txt
ComputationModule/src/: main.cpp  solver.cpp  solver.h  sort.cpp  sort.h
Data/: SK.txt
DataModule/: run.py
